--- a/app/src/templates/footer.html
+++ b/app/src/templates/footer.html
@@ -10,7 +10,7 @@
           <li class="list-inline-item"><a href="https://github.com/tabler/tabler" target="_blank" class="link-secondary"
               rel="noopener">Source code</a></li>
           <li class="list-inline-item">
-            <a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary" rel="noopener">
+            <a href="#" target="_blank" class="link-secondary" rel="noopener">
               <!-- Download SVG icon from http://tabler-icons.io/i/heart -->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink icon-filled icon-inline" width="24"
                 height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
@@ -31,7 +31,7 @@
             All rights reserved.
           </li>
           <li class="list-inline-item">
-            <a href="./changelog.html" class="link-secondary" rel="noopener">
+            <a href="/changelog" class="link-secondary" rel="noopener" target="_blank">
               v0.0.0
             </a>
           </li>
