--- a/app/src/templates/navbar.html
+++ b/app/src/templates/navbar.html
@@ -185,8 +185,8 @@
     <div class="navbar">
       <div class="container-xl">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="./">
+          <li class="nav-item {% if active_page == 'home' %}active{% endif %}">
+            <a class="nav-link" href="/">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/home -->
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
@@ -202,15 +202,20 @@
               </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./form-elements.html">
+          <li class="nav-item {% if active_page == 'problemset' %}active{% endif %}">
+            <a class="nav-link" href="/problemset">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/checkbox -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-list-check">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M9 11l3 3l8 -8" />
-                  <path d="M20 12v6a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h9" />
+                  <path d="M3.5 5.5l1.5 1.5l2.5 -2.5" />
+                  <path d="M3.5 11.5l1.5 1.5l2.5 -2.5" />
+                  <path d="M3.5 17.5l1.5 1.5l2.5 -2.5" />
+                  <path d="M11 6l9 0" />
+                  <path d="M11 12l9 0" />
+                  <path d="M11 18l9 0" />
                 </svg>
               </span>
               <span class="nav-link-title">
@@ -218,15 +223,18 @@
               </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./form-elements.html">
+          <li class="nav-item {% if active_page == 'contests' %}active{% endif %}">
+            <a class="nav-link" href="/contests">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/checkbox -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-vs">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M9 11l3 3l8 -8" />
-                  <path d="M20 12v6a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h9" />
+                  <path d="M2 12c0 5.523 4.477 10 10 10s10 -4.477 10 -10s-4.477 -10 -10 -10s-10 4.477 -10 10" />
+                  <path
+                    d="M14 14.25c0 .414 .336 .75 .75 .75h1.25a1 1 0 0 0 1 -1v-1a1 1 0 0 0 -1 -1h-1a1 1 0 0 1 -1 -1v-1a1 1 0 0 1 1 -1h1.25a.75 .75 0 0 1 .75 .75" />
+                  <path d="M7 9l2 6l2 -6" />
                 </svg>
               </span>
               <span class="nav-link-title">
@@ -234,18 +242,18 @@
               </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./icons.html">
+          <li class="nav-item {% if active_page == 'discussion' %}active{% endif %}">
+            <a class="nav-link" href="/discussion">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/ghost -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-message-circle-user">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M19 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                  <path d="M22 22a2 2 0 0 0 -2 -2h-2a2 2 0 0 0 -2 2" />
                   <path
-                    d="M5 11a7 7 0 0 1 14 0v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-7" />
-                  <path d="M10 10l.01 0" />
-                  <path d="M14 10l.01 0" />
-                  <path d="M10 14a3.5 3.5 0 0 0 4 0" />
+                    d="M12.454 19.97a9.9 9.9 0 0 1 -4.754 -.97l-4.7 1l1.3 -3.9c-2.324 -3.437 -1.426 -7.872 2.1 -10.374c3.526 -2.501 8.59 -2.296 11.845 .48c1.667 1.423 2.596 3.294 2.747 5.216" />
                 </svg>
               </span>
               <span class="nav-link-title">
@@ -253,17 +261,16 @@
               </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./emails.html">
+          <li class="nav-item {% if active_page == 'google' %}active{% endif %}">
+            <a class="nav-link" href="/google">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/mail-opened -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-google">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M3 9l9 6l9 -6l-9 -6l-9 6" />
-                  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
-                  <path d="M3 19l6 -6" />
-                  <path d="M15 13l6 6" />
+                  <path
+                    d="M20.945 11a9 9 0 1 1 -3.284 -5.997l-2.655 2.392a5.5 5.5 0 1 0 2.119 6.605h-4.125v-3h7.945z" />
                 </svg>
               </span>
               <span class="nav-link-title">
@@ -271,17 +278,15 @@
               </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./emails.html">
+          <li class="nav-item {% if active_page == 'ieeextreme' %}active{% endif %}">
+            <a class="nav-link" href="/ieeextreme">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/mail-opened -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-bolt">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M3 9l9 6l9 -6l-9 -6l-9 6" />
-                  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
-                  <path d="M3 19l6 -6" />
-                  <path d="M15 13l6 6" />
+                  <path d="M13 3l0 7l6 0l-8 11l0 -7l-6 0l8 -11" />
                 </svg>
               </span>
               <span class="nav-link-title">
@@ -289,17 +294,23 @@
               </span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./emails.html">
+          <li class="nav-item {% if active_page == 'projecteuler' %}active{% endif %}">
+            <a class="nav-link" href="/projecteuler">
               <span
                 class="nav-link-icon d-md-none d-lg-inline-block"><!-- Download SVG icon from http://tabler-icons.io/i/mail-opened -->
-                <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
-                  stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-math-symbols">
                   <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M3 9l9 6l9 -6l-9 -6l-9 6" />
-                  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
-                  <path d="M3 19l6 -6" />
-                  <path d="M15 13l6 6" />
+                  <path d="M3 12l18 0" />
+                  <path d="M12 3l0 18" />
+                  <path d="M16.5 4.5l3 3" />
+                  <path d="M19.5 4.5l-3 3" />
+                  <path d="M6 4l0 4" />
+                  <path d="M4 6l4 0" />
+                  <path d="M18 16l.01 0" />
+                  <path d="M18 20l.01 0" />
+                  <path d="M4 18l4 0" />
                 </svg>
               </span>
               <span class="nav-link-title">
