--- a/app/src/templates/google-codejam.html
+++ b/app/src/templates/google-codejam.html
@@ -14,7 +14,7 @@
           <div class="row g-2 align-items-center">
             <div class="col">
               <h2 class="page-title">
-                Google Competitions
+                Google Code Jam
               </h2>
             </div>
           </div>
