created pages for codejam, kickstart and hashcode

--- a/app/src/templates/ieeextreme.html
+++ b/app/src/templates/ieeextreme.html
@@ -13,11 +13,8 @@
         <div class="container-xl">
           <div class="row g-2 align-items-center">
             <div class="col">
-              <div class="page-pretitle">
-                Overview
-              </div>
               <h2 class="page-title">
-                Dashboard
+                IEEEXtreme Competitions
               </h2>
             </div>
           </div>
